<resources>
    <string name="app_name">Soldier-Android</string>

    <string name="action_settings">Settings</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="socket_host">http://hollinsky.com:6969</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_decision">Join or Start?</string>

    <string name="hello_world">Hello world!</string>
    <string name="join_game">Join Game!</string>
    <string name="start_game">Start Game!</string>
    <string name="start_a_game">Start a Game!</string>
    <string name="cancel_game">Cancel Game</string>
    <string name="linear_or">- or -</string>
    <string name="vs_text">- vs -</string>
    <string name="name_of_the_game_hint">Game Name</string>
    <string name="game_password_hint">Game Password</string>
    <string name="title_activity_lobby">Game Lobby</string>
    <string name="title_activity_admin_lobby">Game Lobby</string>
    <string name="title_activity_game">Game</string>
    <plurals name="start_with_player_count">
        <item quantity="one">Start Game With %d Player</item>
        <item quantity="other">Start Game With %d Players</item>
    </plurals>
    <string name="title_activity_admin_game">AdminGameActivity</string>
</resources>
