<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sashavarlamov.soldier_android.DecisionActivity">

    <TextView android:text="Join a Game" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:text="Start a Game" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
-->
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.sashavarlamov.soldier_android.DecisionActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/game_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_the_game_hint"
        android:inputType="textPersonName"
        android:maxLength="32"
        android:maxLines="1"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/game_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/game_password_hint"
        android:inputType="textPersonName"
        android:maxLength="32"
        android:maxLines="1"
        android:singleLine="true"/>
    <Button
        android:id="@+id/join_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/join_game"
        android:onClick="joinGame"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/linear_or"/>
    <Button
        android:id="@+id/start_a_game_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start_a_game"
        android:onClick="startNewGame"
        android:textStyle="bold"/>

</LinearLayout>
</ScrollView>